FEAT: optimize Dockerfile for multi-stage builds and custom JRE creation